fix(panel): Remove double border styling when a footer is present without content.

--- a/packages/calcite-components/src/components/panel/panel.scss
+++ b/packages/calcite-components/src/components/panel/panel.scss
@@ -109,7 +109,6 @@
 }
 
 .footer {
-  border-block-start: 1px solid;
   @apply bg-foreground-1
   border-t-color-3
   flex
@@ -118,6 +117,10 @@
 
   flex: 0 0 auto;
   padding: var(--calcite-panel-footer-padding);
+}
+
+.footer-border {
+  border-block-start: 1px solid;
 }
 
 .fab-container {
